--- a/charts/keycloak/values.yaml
+++ b/charts/keycloak/values.yaml
@@ -1,15 +1,46 @@
 keycloak:
+
+  livenessProbe:
+    enabled: true
+  readinessProbe:
+    enabled: true
+
   extraEnvVars:
     - name: KEYCLOAK_EXTRA_ARGS
-      value: "--import-realm"
+      value: "--import-realm --start-dev"
+    - name: KC_ADMIN
+      value: "admin"
+    - name: KC_ADMIN_PASSWORD
+      value: "bad-password"
+    - name: KC_DB_USERNAME
+      value: "bn_keycloak"
+    - name: KC_DB_PASSWORD
+      value: "Q6uktXCjQ"
+    - name: KC_DB_URL_DATABASE
+      value: "bitnami_keycloak"
 
   extraVolumes:
     # Importing realm-data for the demo setup
     - name: "import"
       hostPath:
         path: /data/import
+    - name: "export"
+      hostPath:
+        path: /data/export
 
   extraVolumeMounts:
     # Importing realm-data for the demo setup
     - name: "import"
       mountPath: /opt/bitnami/keycloak/data/import
+    - name: "export"
+      mountPath: /opt/bitnami/keycloak/data/export
+
+  # define admin credentials for my local demo
+  auth:
+    adminUser: "admin"
+    adminPassword: "bad-password"
+
+  postgresql:
+    auth:
+      username: "bn_keycloak"
+      password: "Q6uktXCjQ"
