--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,16 @@ services:
     image: backend-service:latest
     container_name: backend-service
     ports:
-      - "8080:8080"
+      - "8082:8080"
     environment:
       - PORT=8080
       - KEYCLOAK_URL=http://keycloak:8080
       - DB_HOST=postgres
       - DB_PORT=5432
-      - DB_USER=bn_keycloak
-      - DB_PASSWORD=Q6uktXCjQ
-      - DB_NAME=bitnami_keycloak
-      - DB_SCHEMA=events_backup
+      - DB_USER=events_user
+      - DB_PASSWORD=events_password
+      - DB_NAME=events_demo
+      - DB_SCHEMA=events
     depends_on:
       - keycloak
       - postgres
@@ -47,10 +47,11 @@ services:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=bad-password
       - KEYCLOAK_EXTRA_ARGS=--import-realm --start-dev
-      - KC_DB_URL_HOST=postgres
-      - KC_DB_URL_DATABASE=bitnami_keycloak
-      - KC_DB_USERNAME=bn_keycloak
-      - KC_DB_PASSWORD=Q6uktXCjQ
+      - KC_DB=postgres
+      - KC_DB_URL=jdbc:postgresql://postgres:5432/events_demo
+      - KC_DB_SCHEMA=keycloak
+      - KC_DB_USERNAME=keycloak_user
+      - KC_DB_PASSWORD=keycloak_password
     volumes:
       - ./data/import:/opt/bitnami/keycloak/data/import
     depends_on:
@@ -63,13 +64,15 @@ services:
   postgres:
     image: postgres:13
     container_name: postgres
+    ports:
+      - "5432:5432"
     environment:
-      - POSTGRES_USER=bn_keycloak
+      - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=Q6uktXCjQ
-      - POSTGRES_DB=bitnami_keycloak
+      - POSTGRES_DB=events_demo
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./backend/db/init:/docker-entrypoint-initdb.d
+      - ./data/db/01-create-events-schema.sql:/docker-entrypoint-initdb.d/01-create-events-schema.sql
     networks:
       - app-network
 
