--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,8 +10,8 @@ server {
     }
 
     # Proxy API requests to the backend service
-    location /api/ {
-        proxy_pass http://backend-service:8080;
+    location /api/events {
+        proxy_pass http://backend-service:8080/events;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -20,7 +20,7 @@ server {
 
     # Proxy health check requests to the backend service
     location /health {
-        proxy_pass http://backend-service:8080;
+        proxy_pass http://backend-service:8080/health;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
