--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,21 +46,22 @@ services:
     ports:
       - "8081:8080"
     environment:
-      - KEYCLOAK_ADMIN=admin
-      - KEYCLOAK_ADMIN_PASSWORD=bad-password
+      - KC_BOOTSTRAP_ADMIN_USERNAME=admin
+      - KC_BOOTSTRAP_ADMIN_PASSWORD=bad-password
       - KEYCLOAK_EXTRA_ARGS=--import-realm --start-dev
       - KC_DB=postgres
       - KC_DB_URL=jdbc:postgresql://postgres:5432/events_demo
       - KC_DB_SCHEMA=keycloak
       - KC_DB_USERNAME=keycloak_user
       - KC_DB_PASSWORD=keycloak_password
+      - KC_FEATURES=scripts
     volumes:
-      - ./data/import:/opt/bitnami/keycloak/data/import
+      - ./data/import:/opt/keycloak/data/import
     depends_on:
       - postgres
     networks:
       - app-network
-    entrypoint: /opt/keycloak/bin/kc.sh start-dev --import-realm
+    entrypoint: /opt/keycloak/bin/kc.sh start-dev --import-realm --features=scripts
 
   # PostgreSQL for Keycloak
   postgres:
