feat: make the realm configurable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - CLIENT_ID=events-api
       - CLIENT_SECRET=g4dHiyKz7TMX4zLkopxrr45q8J9fZzO6
       - REQUIRED_SCOPE=profile
+      - REALM_NAME=events
     depends_on:
       - keycloak
       - postgres
